--- a/css/components/memory-card-turned.css
+++ b/css/components/memory-card-turned.css
@@ -1,15 +1,7 @@
-#root {
-  display: flex;
-}
-
-#root > article {
-  margin: 5px;
-}
-
-.memory-card {
+.memory-card-turned {
   width: 155px;
   height: 155px;
-  background-color: #f25a70;
+  background-color: #fff;
   border-radius: 30px;
   box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
   display: flex;
@@ -17,7 +9,9 @@
   align-items: center;
 }
 
-.memory-card > .icon {
+.memory-card-turned > .iconTurned {
   width: 100px;
-  height: 100px;
+  height: 100px; 
+  background-color: #d4d4d4;
+  border-radius: 50%;
 }
