--- a/css/components/memory-card.css
+++ b/css/components/memory-card.css
@@ -2,7 +2,7 @@
   display: flex;
 }
 
-#root > article {
+#root > .memory-card {
   margin: 5px;
 }
 
@@ -20,4 +20,23 @@
 .memory-card > .icon {
   width: 100px;
   height: 100px;
+}
+
+.memory-card.-front {
+  background-color: #fff;
+  position: relative;
+}
+
+.memory-card.-front::before {
+  content: "";
+  width: 95px;
+  height: 95px;
+  background-color: #d4d4d4;
+  border-radius: 50%;
+  position: absolute;
+}
+
+.memory-card.-front > .icon {
+  position: absolute;
+  transform: translateY(-12px);
 }
